# collection

./: .gitignore  .pre-commit-config.yaml  README.md  backoffice.html  bioimageio_collection_backoffice.html  bioimageio_collection_config.json  changelog.md  collection_json.md  collection_template.json  hf_integration.md  id_parts.json  index.html  index.json  mkdocs.yml  model_nouns_notes.txt  partners.json  pil_image_io.py  pyproject.toml  requirements.txt  reviewers.json  search.js  setup.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: -bioimageiobot--please-upload.md  bioimageiobot-please-upload.yaml
.github/actions/: cache_index.yaml
.github/workflows/: backup.yaml  backup_call.yaml  build.yaml  build_backoffice.yaml  check_compatibility.yaml  check_compatibility_biapy.yaml  check_compatibility_bioimageio_core.yaml  check_compatibility_careamics.yaml  check_compatibility_deepimagej.yaml  check_compatibility_icy.yaml  check_compatibility_ilastik.yaml  conflate_summaries.yaml  delete.yaml  email_call.yaml  emails_to_chat.yaml  generate_collection_json.yaml  generate_collection_json_call.yaml  index.yaml  publish.yaml  publish_call.yaml  request_changes.yaml  request_changes_call.yaml  retest_all.yaml  stage.yaml  stage_call.yaml  summarize.yaml  test.yaml  test_call.yaml  upload_via_issue.yaml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/api/: index.html
0.1/changelog/: index.html
0.1/compatibility/: index.html
0.1/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_1ad490a16cd3cece___init___py.html  z_1ad490a16cd3cece___main___py.html  z_1ad490a16cd3cece__cli_py.html  z_1ad490a16cd3cece__requests_utils_py.html  z_1ad490a16cd3cece__settings_py.html  z_1ad490a16cd3cece__summarize_py.html  z_1ad490a16cd3cece__version_py.html  z_1ad490a16cd3cece_check_compatibility_py.html  (+9 more)
backoffice/: __init__.py  __main__.py  _backoffice.py  _cli.py  _settings.py  _summarize.py  _thumbnails.py  backup.py  check_compatibility.py  compatibility.py  generate_collection_json.py  gh_utils.py  index.py  remote_resource.py  run_core.py  run_dynamic_tests.py  s3_client.py  summary.py  upload_model_to_zenodo.py  upload_model_to_zenodo.py.old  utils.py  validate_format.py
bioimageio_collection_backoffice/: __init__.py  __main__.py  _backoffice.html  _backoffice.py  _settings.html  _settings.py  _thumbnails.html  _thumbnails.py  backup.html  backup.py  cache.html  cache.py  cli.html  cli.py  client.py  client_base.py  collection_config.html  collection_json.html  collection_json.py  common.html  common.py  conda_env.html  conda_env.py  db_structure.html  folder_client.py  generate_collection_json.html  generate_collection_json.py  gh_utils.html  gh_utils.py  id_map.html  id_map.py  mailroom.html  remote_base.html  remote_base.py  remote_collection.html  remote_collection.py  remote_resource.html  remote_resource.py  requests_utils.html  requests_utils.py  (+14 more)
docs/: api.md  index.md  references.md
envs/: bioimageio_core_base.yaml
scripts/: backup.py  batch_update.py  check_compatibility_biapy.py  check_compatibility_bioimageio_core.py  check_compatibility_careamics.py  check_compatibility_deepimagej.py  check_compatibility_icy.py  check_compatibility_ilastik.py  check_compatibility_java_software.py  conclude.py  generate_compatibility_overview.py  generate_reports_overview.py  get_java_software_versions.py  publish.py  reupload_old_collection.py  run_dynamic_tests.py  script_utils.py  set_id_to_doi.py  stage.py  stage_manually.py  test_dynamically.py  update_status.py  upload_model_to_zenodo.py  upload_reports.py  upload_resource.py
scripts/utils/: s3_client.py  (+3 more)
tests/: conftest.py  test_backoffice.py  test_bioimageio_collection_config.py  test_collection_config.py  test_remote_collection.py  test_resource_id.py  test_utils_plain.py  test_validate_format.py
(+3145 files in other folders)
