[project]
name = "backoffice"
description = "backoffice to control bioimage.io collection"
authors = [{ name = "Fynn Beuttenmüller", email = "thefynnbe@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "bioimageio.core>=0.9.2",
    "bioimageio.spec>=0.5.4.3",
    "loguru",
    "pydantic-settings",
    "pygithub",
    "httpx",
    "ruyaml",
    "tqdm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff", "pdoc", "pre-commit", "pyright"]

[project.scripts]
backoffice = "backoffice.__main__:main"


[tool.pyright]
exclude = ["**/__pycache__"]
include = ["src"]
pythonPlatform = "All"
pythonVersion = "3.12"
reportIncompatibleMethodOverride = true
reportMissingSuperCall = "error"
reportMissingTypeArgument = true
reportMissingTypeStubs = "warning"
reportUninitializedInstanceVariable = "error"
reportUnknownMemberType = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"
reportUnusedVariable = "error"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
addopts = "--capture=no --failed-first"
testpaths = ["tests"]

[project.urls]
"Bug Reports" = "https://github.com/bioimage-io/collection/issues"
Documentation = "https://bioimage-io.github.io/collection/backoffice.html"
Source = "https://github.com/bioimage-io/collection"
